# search_engine_vritat

./: .backend.log.icloud  .db 2.sqlite3.icloud  .db.sqlite3.icloud  .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose-deploy.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-amw-v2.yml  deploy-aws-elastic.yml  deploy-aws-env.yml  deploy-aws-v10.yml  deploy-aws-v11.yml  deploy-aws-v12.yml  deploy-aws-v13.yml  deploy-aws-v14.yml  deploy-aws-v15.yml  deploy-aws-v5.yml  deploy-aws-v8.yml  deploy-aws-v9.yml  deploy-aws.yml  deploy-v4.yml  deploy-v6.yml  deploy-v7.yml  deploy.yml  deploy_to_ec2.yml
backend/: admin.py  apps.py  get_source_urls.py  jwt_settings.py  models.py  urls.py  views.py
backend/fixtures/: base_users.json  superuser.json
backend/migrations/: 0001_initial.py  0002_news_deleted_news_sentiment.py  0003_news_source.py  0004_news_archived.py  0005_alter_news_source.py  0006_alter_news_link.py
backend/scrapers/: feed_scraper.py  serializer.py
compose/dev/: Dockerfile_backend  Dockerfile_frontend
compose/prod/: Dockerfile_backend  Dockerfile_frontend  (+2 more)
config/: settings.py  urls.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json  tailwind.config.js
nginx/: Dockerfile  nginx.conf
search_engine/: apps.py  get_rss_urls.py  models.py  rss.py  sentiment_analysis.py  serialize_and_validate.py  serializer.py  source_urls.json  tasks.py  urls.py  views.py
search_engine_vritat/: rss.py  urls.json
(+73 files in other folders)
