[tool.poetry]
name = "search-engine-vritat"
version = "0.1.0"
description = ""
authors = ["eskimosa <esskimosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pandas = "^2.2.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
