[tool.poetry]
name = "search-engine-vritat"
version = "0.1.0"
description = ""
authors = ["eskimosa <esskimosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.11"
requests = "^2.31.0"
textblob = "^0.18.0.post0"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

